# pypozo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  FUNCIONALIDADES_COMPLETADAS.md  FUNCIONALIDADES_FUSION.md  FUSION_COMPLETADA_FINAL.md  FUSION_FIX_SUMMARY.md  FUSION_IMPLEMENTATION_REPORT.md  README.md  README_NEW.md  SECURITY.md  SETUP_COMPLETE.md  SUBPLOTS_FIX_COMPLETADO.md  debug_welly.py  dev_setup.sh  environment_pozo.yaml  launch_gui.py  launch_pypozo.py  pypozo_app.py  pyproject.toml  pytest.ini  test_fusion_gui_output.las  test_fusion_simple.py  test_gui.py  test_gui_fusion_final.py  test_gui_quick.py  test_neural_completion_analysis.py  test_simple_export.las  test_subplots_gui.py  test_visual_branding.py  test_visualizacion.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: tests.yml
conda/: environment.yaml
data/: 70449_abedul1_gn_1850_800_05mz79p.las  ABEDUL-1_MERGED.las  ABEDUL-1_MERGED_COMPLETE.las  ABEDUL-1_PROCESADO.las  ABEDUL-1_PROCESS.las  ABEDUL1_REPROCESADO.las  ARIEL-1_MERGED.las  CABALLO-1_MERGED.las  FURBERO-101_MERGED.las  GASPAR-1_MERGED.las  JANO-1_MERGED.las  PALMA SOLA NORTE-1_MERGED.las  PALO BLANCO 791_PROCESADO.las  PALOBLANCO791_REPROCESADO.las  PALOBLANCO791_REPROCESADO.las.las  analisis_avanzado_ARIEL-1.txt
data/Originales/: ._70206_abedul1_bhc_1845_300_05mz79p.tif  ._70207_abedul1_bhc_301_10_29en79p.tif  ._70398_abedul1_bhc_1845_300_05mz79p.las  ._70447_abedul1_bhc_301_10_29en79p.las  ._70448_abedul1_fdc_1845_800_05mz79p.las  ._70449_abedul1_gn_1850_800_05mz79p.las  ._70470_abedul1_il_301_10_29en79p.las  ._94649_abedul1_mll_1845_800_04mz79p.las  ._94953_abedul1_il_1842_301_03mz79p.las  17384_abedul1_fdc_1845_800_05mz79p.tif  17386_abedul1_gn_1850_800_05mz79p.tif  70207_abedul1_bhc_301_10_29en79p(1).tif  70213_abedul1_hrt_1655_20_08mz79p.tif  70214_abedul1_il_1842_301_03mz79p(1).tif  70398_abedul1_bhc_1845_300_05mz79p(1).las  70447_abedul1_bhc_301_10_29en79p.las  70448_abedul1_fdc_1845_800_05mz79p.las  70449_abedul1_gn_1850_800_05mz79p.las  70470_abedul1_il_301_10_29en79p.las  7259_abedul1_il_301_10_29en79p(1).tif  94649_abedul1_mll_1845_800_04mz79p.las  94953_abedul1_il_1842_301_03mz79p.las  96528_abedul1_mll_1845_800_04mz79p.tif  pozo_abedul1.ipynb
demo/: demo_final.py  demo_fusion_completo.py  demo_gui_petrophysics.py  demo_porosity.py  demo_vcl.py  demo_workflows.py  test_simple_export.py
demo_fusion_output/: DEMO_POZO_FUSION_BASICOS.las  DEMO_POZO_FUSION_ELECTRICOS.las  DEMO_POZO_FUSION_POROSIDAD.las
docs/: API_REFERENCE.md  COMPLETADO.md  FUSION_COMPLETADA.md  GUIA_RAPIDA.md  MANUAL_USUARIO.md  PROYECTO_ORGANIZADO_FINAL.md  PYPOZO_2.0_COMPLETADO.md  README.md  REORGANIZACION_COMPLETADA.md  REORGANIZACION_PLAN.md  VISUALIZATION_FIXES_COMPLETADO.md  elplan.md
images/: Diseño de logo retro.png~
notebooks/: PyPozo_2.0_Demo_Completo.ipynb  Untitled.ipynb  get_started.ipynb  testbook.ipynb
output/: test_fusion_debug_output.las
patreon_dlc/: README.md  __init__.py  advanced_lithology.py  ai_interpreter.py  loader.py  neural_completion.py
patreon_dlc/completion/: __init__.py  dialogs.py  neural_completion.py
patreon_dlc/fluids/: __init__.py  fluid_interpreter.py
patreon_dlc/lithology/: __init__.py  lithology_analysis.py
patreon_dlc/models/: __init__.py  nn_models.py  preprocessing.py
patreon_dlc/shared/: __init__.py  data_utils.py  exceptions.py  plotting.py
scripts/: launch_pypozo.py
src/: pypozo.py
test_merger_output/: fusion_test_output.las  test_well_1.las  test_well_3.las
tests/: README.md  aitests.py  conftest.py  final_test.py  minimal_test.py  pruebas.py  pyfoamtest.py  run_all_tests.py  run_tests.py  test_app_quick.py  test_basic.py  test_core.py  test_dlc.py  test_enhanced_petro.py  test_enhanced_porosity.py  test_fusion_debug.py  test_fusion_gui.py  test_fusion_originales.py  test_fusion_pozos.py  test_gui.py  test_gui_auto_merge.py  test_gui_subplots.py  test_integration.py  test_nuevas_funciones.py  test_petrophysics.py  test_premium_menu.py  test_quick_check.py  test_real_merger.py  test_simple.py  test_subplots_fix.py  test_visualization_fixes.py  visualpruebas.py
(+40 files in other folders)
