[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypozo"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JoseMariaGarciaMarquez", email = "josemariagarciamarquez2.72@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", 
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "welly>=0.5.2",
    "lasio>=0.30",
    "pathlib",
    "dataclasses",
    "typing-extensions",
    "openpyxl>=3.0.0",
    "PyQt5>=5.15.0",
    "geopandas>=0.10.0;platform_system!='Windows'",
    "shapely>=1.8.0;platform_system!='Windows'"
]

[project.urls]
Documentation = "https://github.com/unknown/pypozo#readme"
Issues = "https://github.com/unknown/pypozo/issues"
Source = "https://github.com/unknown/pypozo"

[tool.hatch.version]
path = "src/pypozo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pypozo tests}"

[tool.coverage.run]
source_pkgs = ["pypozo", "tests"]
branch = true
parallel = true
omit = [
  "src/pypozo/__about__.py",
]

[tool.coverage.paths]
pypozo = ["src/pypozo", "*/pypozo/src/pypozo"]
tests = ["tests", "*/pypozo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]